fixed z-index on landing page iPhone

--- a/css/styles.css
+++ b/css/styles.css
@@ -5,6 +5,8 @@ body {
 }
 #title {
   background-color: #ff4c68;
+  height: 100vh;
+  width: 100vw;
   color: white;
 }
 
@@ -39,12 +41,21 @@ h2 {
 
 .nav-item {
   padding: 0px 16px;
+  border-bottom: 2px solid #ff4c68;
+  border-top: 2px solid #ff4c68;
+}
+
+.nav-item:hover {
+  border-bottom: 2px solid white;
+  border-top: 2px solid white;
+  color: white;
 }
 
 .nav-link {
   font-size: 1.2rem;
   font-family: 'Montserrat';
-  font-weight: 100;
+  font-weight: 400;
+  color: white;
 }
 
 /* Download buttons */
@@ -55,13 +66,24 @@ h2 {
 /* Title Image (iPhone) */
 
 .iphone {
-  width: 60%;
+  /* width: 60%; */
   transform: rotate(25deg);
+  position: absolute;
+  right: 21%;
+}
+
+.title-text {
+  margin: auto 0;
+  position: relative;
+  z-index: 1;
 }
 
 /* features */
 #features {
   padding: 5rem 0;
+  background-color: white;
+  position: relative;
+  z-index: 1;
 }
 
 #features i {
@@ -92,7 +114,7 @@ h2 {
 
 #testimonials {
   text-align: center;
-  background-color: #ef8172;
+  background-color: #ff4c68;
   color: white;
   padding-bottom: 0;
 }
@@ -114,7 +136,7 @@ h2 {
 #press {
   padding: 3% 15%;
   text-align: center;
-  background-color: #ef8172;
+  background-color: #ff4c68;
 }
 
 .press-logo {
@@ -129,6 +151,9 @@ h2 {
   text-align: center;
 }
 
-.pricing-column {
+.pricingColumn {
   padding: 3% 2%;
+}
+#pricing .card {
+  margin: 1rem 0;
 }
